--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <script type="text/javascript" src="main.js">
         </script>
       <main>
-          <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
+        
+        <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
             <div class="textbox" id="wep1box"></div>
-         <button id="wep2but" onclick ="clickfun('Weapon', 'wep2box')">Weapon 2</button>
+        <button id="wep2but" onclick ="clickfun('Weapon', 'wep2box')">Weapon 2</button>
             <div class="textbox" id="wep2box"></div>
         <button id="sidebut" onclick ="clickfun('Sidearm', 'sidebox')">Sidearm</button>
             <div class="textbox" id="sidebox"></div>
@@ -20,6 +21,7 @@
             <div class="textbox" id="melbox"></div>
         <button id="transbut" onclick ="clickfun('Transport', 'transbox')">Transport</button>
             <div class="textbox" id="transbox"></div>
+          <button id="randall" onclick="clickall()">Randomize All</button>
        </main>
         </body>
 </html>
