--- a/index.html
+++ b/index.html
@@ -10,18 +10,30 @@
         <script type="text/javascript" src="main.js">
         </script>
       <main>
-        
-        <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
-            <div class="textbox" id="wep1box"></div>
-        <button id="wep2but" onclick ="clickfun('Weapon', 'wep2box')">Weapon 2</button>
-            <div class="textbox" id="wep2box"></div>
-        <button id="sidebut" onclick ="clickfun('Sidearm', 'sidebox')">Sidearm</button>
-            <div class="textbox" id="sidebox"></div>
-        <button id="melbut" onclick ="clickfun('Melee', 'melbox')">Melee</button>
-            <div class="textbox" id="melbox"></div>
-        <button id="transbut" onclick ="clickfun('Transport', 'transbox')">Transport</button>
-            <div class="textbox" id="transbox"></div>
-          <button id="randall" onclick="clickall()">Randomize All</button>
+        <button id="randall" onclick="clickall()">Randomize All</button>
+        <ul>
+           <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
+               <div class="textbox" id="wep1box"></div>
+           <button id="wep2but" onclick ="clickfun('Weapon', 'wep2box')">Weapon 2</button>
+               <div class="textbox" id="wep2box"></div>
+           <button id="sidebut" onclick ="clickfun('Sidearm', 'sidebox')">Sidearm</button>
+               <div class="textbox" id="sidebox"></div>
+           <button id="melbut" onclick ="clickfun('Melee', 'melbox')">Melee</button>
+               <div class="textbox" id="melbox"></div>
+           <button id="transbut" onclick ="clickfun('Transport', 'transbox')">Transport</button>
+               <div class="textbox" id="transbox"></div>
+        </ul>
+       <u>
+        <button id="wepool" onclick="wepool()">Weapon Pool</button>
+           <div id="poolbox1"></div>
+           <div id="poolbox2"></div>
+           <div id="poolbox3"></div>
+           <div id="poolbox4"></div>
+           <div id="poolbox5"></div>
+           <div id="poolbox6"></div>
+           <div id="poolbox7"></div>
+           <div id="poolbox8"></div>           
+       </u>
        </main>
         </body>
 </html>
