--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
            <button id="transbut" onclick ="clickfun('Transport', 'transbox')">Transport</button>
                <div class="textbox" id="transbox"></div>
         </ul>
-       <u>
-        <button id="wepool" onclick="wepool()">Weapon Pool</button>
+       
+        <button id="wepool" onclick="rollpool()">Weapon Pool</button>
+         <div class="linebox">
            <div id="poolbox1"></div>
            <div id="poolbox2"></div>
            <div id="poolbox3"></div>
@@ -32,8 +33,26 @@
            <div id="poolbox5"></div>
            <div id="poolbox6"></div>
            <div id="poolbox7"></div>
-           <div id="poolbox8"></div>           
-       </u>
+           <div id="poolbox8"></div>
+          </div>
+          <div class="linebox">
+           <div id="poolbox9"></div>
+           <div id="poolbox10"></div>
+           <div id="poolbox11"></div>
+           <div id="poolbox12"></div>
+          </div>
+           <div class="linebox">
+           <div id="poolbox13"></div>
+           <div id="poolbox14"></div>
+           <div id="poolbox15"></div>
+           <div id="poolbox16"></div>
+          </div>
+          <div class="linebox">
+           <div id="poolbox17"></div>
+           <div id="poolbox18"></div>
+           <div id="poolbox19"></div>
+           <div id="poolbox20"></div>
+          </div>
        </main>
         </body>
 </html>
