--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
       <main>
-        <button id="randall" onclick="clickall()">Randomize All</button>
-        <ul>
-           <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
+    
+    <!--    <ul>
+          <button id="wep1but" onclick ="clickfun('Weapon', 'wep1box')">Weapon 1</button>
                <div class="textbox" id="wep1box"></div>
            <button id="wep2but" onclick ="clickfun('Weapon', 'wep2box')">Weapon 2</button>
                <div class="textbox" id="wep2box"></div>
@@ -19,9 +19,9 @@
            <button id="melbut" onclick ="clickfun('Melee', 'melbox')">Melee</button>
                <div class="textbox" id="melbox"></div>
            <button id="transbut" onclick ="clickfun('Transport', 'transbox')">Transport</button>
-               <div class="textbox" id="transbox"></div>
-        </ul>
-        <!--<select id="players">
+               <div class="textbox" id="transbox"></div> 
+        </ul> -->
+        <!--<select id="players"> 
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -60,6 +60,7 @@
            <div class="colortext" id="redmel"></div>
            <div class="colortext" id="redtrans"></div>
           </div>
+          <button class="randall">Randomize All</button>
        </main>
          <script type="text/javascript" src="main.js">
         </script>
