--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
            <div class="colortext" id="greentrans"></div>
           </div>
           <div class="redbox">
-              <div class="refresh" src="yellow refresh.png" id="redkit" name="4" onclick="playerroll('red')"><image src="red%20refresh.png" style="width:20px;height:20px;"></image></div>
+             <div class="refresh" id="redkit" name="4" onclick="playerroll('red')"><image src="red%20refresh.png" style="width:20px;height:20px;"></image></div>
            <div class="colortext" id="redwep1"></div>
            <div class="colortext" id="redwep2"></div>
            <div class="colortext" id="redside"></div>
            <div class="colortext" id="redmel"></div>
            <div class="colortext" id="redtrans"></div>
           </div>
-          <button class="randall">Randomize All</button>
+          <button class="randall" onclick="squadroll()">Randomize All</button>
        </main>
          <script type="text/javascript" src="main.js">
         </script>
